# Zitrone

./: .gitignore  .gitmodules  CMakeLists.txt  License.md  Readme.md  changelog.txt  config  config.json  todolist.txt
licenses/: PlayfairDisplayFont.txt  TGUI.txt
res/languages/: english.txt  polski.txt
res/profiles/: default.json  list.app.json  test.json
res/themes/: dark  industrial  light  tgui-dark  tgui-industrial  tgui-light
res/themes/dark/: tgui  theme.json
res/themes/industrial/: tgui  theme.json
res/themes/light/: tgui  theme.json
src/: App.cpp  App.hpp  Config.cpp  Config.hpp  Grid.cpp  Grid.hpp  GridHints.cpp  GridHints.hpp  Note.cpp  Note.hpp  ProfileEditor.cpp  ProfileEditor.hpp  ProfileManager.cpp  ProfileManager.hpp  Project.cpp  Project.hpp  Settings.cpp  Settings.hpp  Theme.cpp  Theme.hpp  UI.cpp  UI.hpp  main.cpp
src/fw/: Button.cpp  Button.hpp  DashLine.cpp  DashLine.hpp  ImageButton.cpp  ImageButton.hpp  Line.cpp  Line.hpp  ResourceManager.cpp  ResourceManager.hpp  TextButton.cpp  TextButton.hpp  Theme.cpp  Theme.hpp  oldButton.cpp  oldButton.hpp
src/fw/buttons/: Button.cpp  Button.hpp  ImageButton.hpp  TextButton.cpp
